Bug 1743348 - Make the list of calendars scroll when it overflows. r=mkmelin And a few other minor tidy-ups.
Differential Revision: https://phabricator.services.mozilla.com/D132332

--HG--
extra : rebase_source : 9543564c9156689ff4746e440398096555e36365

--- a/calendar/base/themes/common/widgets/calendar-widgets.css
+++ b/calendar/base/themes/common/widgets/calendar-widgets.css
@@ -165,10 +165,11 @@ checkbox.treenode-checkbox > .checkbox-label-center-box > .checkbox-label-box > 
 #calendar-list-inner-pane {
   display: flex;
   flex-direction: column;
+  height: 0; /* Force overflow if necessary. */
 }
 
 #calendar-list-inner-pane > #calendar-list {
-  display: block;
+  overflow: auto;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -269,7 +270,7 @@ checkbox.treenode-checkbox > .checkbox-label-center-box > .checkbox-label-box > 
   opacity: 0.7;
 }
 
-#calendar-list > li > .calendar-color {
+#calendar-list > :is(li, richlistitem) > .calendar-color {
   width: 10px;
   height: 10px;
   border-radius: 5px;
@@ -296,4 +297,8 @@ checkbox.treenode-checkbox > .checkbox-label-center-box > .checkbox-label-box > 
 
 #calendar-list > li > .calendar-readstatus:not([src]) {
   visibility: hidden;
+}
+
+#calendar-list > richlistitem {
+  -moz-box-align: center;
 }
